# blockchain-immutable-log

./: LICENSE  README.md
blockchain/: abi.json  agent.py  config.json  immutableLog.sol
ui_app/: .env.example  Dockerfile  README.md  docker-compose.yml  pyproject.toml
ui_app/screenshots_for_Artem/: text.txt
ui_app/src/: app.py
ui_app/src/core/: hashing.py
ui_app/tests/: test_core.py  test_ui.py
ui_app/tests/fixtures/: compromised_log.txt  original_log.txt
