[project]
name = "immutable-log-ui"
version = "0.1.0"
description = "UI and Core logic for ImmutableLog"
package-mode = false
authors = [
    {name = "JKL2theBest",email = "muhammet.jkl2.suhanguylev@gmail.com"}
]
readme = "README.md"
requires-python = "^3.12"
dependencies = [
    "streamlit (>=1.56.0,<2.0.0)",
    "pydantic (>=2.12.5,<3.0.0)",
    "python-dotenv (>=1.2.2,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "^9.0.2"
pytest-cov = "^7.1.0"

